fixed gap in status bar, fixed HTML markup inconsistencies in status messages
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@12648 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/install/styles/style.css
+++ b/install/styles/style.css
@@ -150,6 +150,18 @@ a:hover {
   padding: 8px 20px;
 }
 
+#statusTable {
+  width: 100%;
+  height: 20px;
+  margin: 0;
+  padding: 0;
+  border-spacing: 0;
+  border-collapse: collapse;
+}
+#progressMade { background: #fd6704 url('../images/btnBGor.gif') bottom; border: thin solid #ddd; }
+#progressToGo { background-color: #eee; border-left: none; border: thin solid #ddd; }
+#progressStatus { text-align: right; margin-bottom: 1.0em; }
+
 #footer {
   width: 720px;
   font-size: 0.9em;
@@ -165,37 +177,23 @@ a:hover {
   font-size: 1.4em;
 }
 
-.error {
-  font-weight: bold;
-  padding: 5px 5px 5px 45px;
-  border: 1px solid #999;
-  background: #fcc url('../../install/images/ico_error.gif') 5px 50% no-repeat;
-}
-
-.warning {
-  font-weight: bold;
-}
-div.warning {
-  padding: 5px 5px 5px 45px;
-  border: 1px solid #999;
-  background: #ffc url('../../install/images/ico_warning.gif') 5px 5px no-repeat;
-}
-
-.success {
+.error, .warning, .success {
   font-size: 1.2em;
   font-weight: bold;
-  margin-right: -0.15em;
 }
+.error { color: red; }
+.warning { color: #f63; }
+.success { color: green; }
 
-div.success {
-  padding: 5px 5px 5px 45px;
+div.error, div.warning, div.success {
+  color: #000;
+  padding: 5px 10px 5px 45px;
   border: 1px solid #999;
-  background: #cfc url('../../install/images/ico_success.gif') 5px 50% no-repeat;
+  vertical-align: middle;
 }
-
-h2.succsss { color: green; }
-h2.warning { color: #f63; }
-h2.error { color: red; }
+div.error { background: #fcc url('../../install/images/ico_error.gif') 5px 50% no-repeat; }
+div.warning { background: #ffc url('../../install/images/ico_warning.gif') 5px 50% no-repeat; }
+div.success { background: #cfc url('../../install/images/ico_success.gif') 5px 5px no-repeat; }
 
 .go {
   font-weight: bold;
@@ -216,12 +214,12 @@ h2.error { color: red; }
     display: block;
     margin: 0 9px;
     padding: 6px 0;
-    color: #000;
+    color: #333;
     text-decoration: none;
     white-space: nowrap;
     text-shadow: #999 0.2em 0.2em 0.2em;
  }
-.btn a:hover { color: red; }
+.btn a:hover { color: #000; }
 
 .btn-redo { display: block; position: relative; z-index: 1; background: #fc6 url('../images/btnBGbl.gif') repeat-x top;  border: 1px solid #339; }
 .btn-redo span { display: block; z-index: 10; margin: -1px 0 0 -1px; background: url('../images/btnTLbl.gif') no-repeat top left; }
@@ -359,21 +357,6 @@ input, select {
   margin: 4px 8px 0px 8px;
   border: 1px solid #999;
 }
-
-#statusTable {
-  width: 100%;
-  height: 20px;
-  margin: 0;
-  padding: 0;
-}
-#statusTable tr, #statusTable td {
-  border: 1px solid #999;
-  padding: 0;
-  margin: 0;
-}
-#progressMade { background: #fd6704 url('../images/btnBGor.gif') bottom; }
-#progressToGo { background-color: #eee; border-left: none; }
-#progressStatus { text-align: right; margin-bottom: 1.0em; }
 
 .autoCompleteBackground {
   border-left: 1px solid #ccc;
